--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -22,17 +22,8 @@
     -moz-box-sizing: border-box;
 }
 
-html, body {
-    height: 100vh;
-}
-
 body {
-    background-image: linear-gradient(to bottom, hsl(273, 75%, 66%), hsl(240, 73%, 65%));
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    background-image: linear-gradient(to bottom, #af67e9, #6565e7);
 }
 
 #container {
