--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -23,7 +23,7 @@
 }
 
 body {
-    background-image: linear-gradient(to bottom, #af67e9, #6565e7);
+    background-image: linear-gradient(to bottom, #af67e9, #6565e7, #af67e9);
 }
 
 #container {
